vendor/hdf5-metno-derive-0.10.0/tests/compile-fail/pd-empty-tuple-struct.rs
use hdf5_metno_derive::H5Type;

use std::marker::PhantomData;

#[derive(H5Type)]
//~^ ERROR proc-macro derive
//~^^ HELP Cannot derive H5Type for empty tuple structs
struct Foo<T>(PhantomData<T>);

fn main() {}
