vendor/hdf5-metno-derive-0.10.0/tests/compile-fail/pd-empty-tuple-struct.stderr
error: cannot derive `H5Type` for empty tuple structs
 --> tests/compile-fail/pd-empty-tuple-struct.rs:8:8
  |
8 | struct Foo<T>(PhantomData<T>);
  |        ^^^
